# wl_simple_draw

./: CMakeLists.txt  generate-xdg-shell-protocol.sh  main.cpp  shm_tools.h
